--- a/appointa/index.html
+++ b/appointa/index.html
@@ -11,31 +11,16 @@
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
 
-  <script type="application/ld+json">
-    {"@context":"https://schema.org",
-    "@graph":[{"@type":"WebSite","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me/",
-    "name":"Vicky Wang","description":"UX/UI Designer | Product Designer",
-    "potentialAction":[{"@type":"SearchAction",
-    "target":{"@type":"EntryPoint","urlTemplate":"https://vickywang.me/?s={search_term_string}"},
-    "query-input":"required name=search_term_string"}],"inLanguage":"en-US"},
-    {"@type":"CollectionPage","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me","name":"Vicky Wang | User Experience Designer | UX Design",
-    "isPartOf":{"@id":"https://vickywang.me/#website"},
-    "description":"Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)",
-    "breadcrumb":{"@id":"https://vickywang.me/#breadcrumb"},
-    "inLanguage":"en-US","potentialAction":[{"@type":"ReadAction",
-    "target":["https://vickywang.me/"]}]},{"@type":"BreadcrumbList","@id":"https://vickywang.me/#breadcrumb",
-    "itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]}]} </script>
+
 
   <meta name="description" content="Vicky Wang's portfolio website">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I am a UI/UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+    content='A simple way for recruiters to quickly and easily schedule interviews' />
   <meta property='og:url' content="https://vickywang.me/" />
-  <meta property="og:site_name" content="Vicky Wang's Website">
+  <meta property="og:site_name" content="Vicky Wang's Project">
 
 
 
@@ -43,7 +28,7 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -156,14 +141,7 @@
                   </div>
                 </div>
               </a>
-              <a href="/seer/">
-                <div class="cardBorder SEER">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
-                  <div class="element">
-                    <h5 class="colorBlack">SEER | For grow business</h5>
-                  </div>
-                </div>
-              </a>
+
             </div>
           </li>
 
@@ -549,7 +527,7 @@
 
                       <div class="blankHXS"></div>
 
-                      <h4> <strong> Taking longer to schedule</strong> </h4>
+                      <h4> <strong>Harder to schedule within a reasonable timeframe</strong> </h4>
 
                       <ul>
                         <li>
@@ -997,9 +975,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">On average,
-                    recruiters are spending two-thirds of their overall hiring time on the interview
-                    process.
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
                   </p>
 
                 </div>
@@ -1585,7 +1561,7 @@
           <div class="Grid Grid--full u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Sketch.png" alt="Pain points">
+                <img class=" modal-target" src="userflow_Sketch.svg" alt="Pain points">
               </div>
             </div>
           </div>
@@ -1596,10 +1572,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi
-                  sketch
-                  is to ensure recruiters check interview team availability and schedule interviews
-                  for both parties easily and quickly.</p>
+                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
               </div>
             </div>
           </div>
@@ -1718,9 +1691,8 @@
 
                     <p> <strong>Goal of the testing</strong></p>
                     <ul>
-                      <li> Does the design solve the problem? </li>
+                      <li> Does the design solve the scheduling problem? </li>
                       <li> Is it easy to schedule an interview than before? </li>
-
                     </ul>
                     <p> <strong>Test with potential users</strong></p>
                     <ul>
@@ -1755,7 +1727,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Test
                     wireframes can be a helpful tool for evaluating the user experience of a
                     proposed design.</p>
                 </div>
@@ -1866,9 +1838,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">In general, test
-                    wireframes can be a helpful tool for evaluating the user experience of a
-                    proposed design.</p>
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details.</p>
                 </div>
               </div>
             </div>
