--- a/appointa/index.html
+++ b/appointa/index.html
@@ -141,7 +141,14 @@
                   </div>
                 </div>
               </a>
-
+              <a href="/seer/">
+                <div class="cardBorder SEER">
+                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <div class="element">
+                    <h5 class="colorBlack">SEER | For grow business</h5>
+                  </div>
+                </div>
+              </a>
             </div>
           </li>
 
@@ -1838,7 +1845,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details.</p>
+                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
                 </div>
               </div>
             </div>
@@ -2021,7 +2028,69 @@
             </div>
           </section>
           <div class="blankHS"></div>
+          <section id="designsystem">
 
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="Grid">
+                      <p class="tArrow"> Design system</p>
+                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="flex-container cardAPPOINTA">
+                <div class="left-zone">
+                  <ul class="list">
+                    <li class="item">
+                      <input type="radio" id="dropdown" name="UI" checked="checked" />
+                      <label class="dropdown" for="dropdown">Color styles</label>
+                      <div class="content-test">
+                        <img class="shadowFilterL" src="Components_dropdown.svg" alt="Components">
+                      </div>
+                    </li>
+                    <li class="item">
+                      <input type="radio" id="callout" name="UI" />
+                      <label class="callout" for="callout">Text styles</label>
+                      <div class="content-test">
+                        <img class="shadowFilterL" src="Components_callout.svg" alt="Components">
+                      </div>
+                    </li>
+
+                    <li class="item">
+                      <input type="radio" id="button" name="UI" />
+                      <label class="button" for="button">Grids & Navigation</label>
+                      <div class="content-test">
+                        <img class="shadowFilterL" src="Components_button.svg" alt="Components">
+                      </div>
+                    </li>
+                    <li class="item">
+                      <input type="radio" id="button" name="UI" />
+                      <label class="button" for="button">Spacing & Elevation</label>
+                      <div class="content-test">
+                        <img class="shadowFilterL" src="Components_button.svg" alt="Components">
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="right-zone"></div>
+              </div>
+
+
+
+
+            </div>
+
+
+            <!-- UI -->
+
+          </section>
           <section id="components">
 
             <!-- Arrow -->
