--- a/appointa/index.html
+++ b/appointa/index.html
@@ -141,11 +141,11 @@
                   </div>
                 </div>
               </a>
-              <a href="/seer/">
-                <div class="cardBorder SEER">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+              <a href="/design_system/">
+                <div class="cardBorder ">
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | For grow business</h5>
+                    <h5 class="colorBlack">Design System | For vickywang.me</h5>
                   </div>
                 </div>
               </a>
