--- a/architecture/index.html
+++ b/architecture/index.html
@@ -185,9 +185,8 @@
 
   </div>
   <!--intro-->
-  <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+  <div class="blankHXS"></div>
+
 
   <!-- Selected Projects -->
   <div class="wrapper">
