--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Vicky W. | Product Designer | UI/UX Designer | Projects </title>
-  
+
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
@@ -149,7 +149,6 @@
               <div class="intro">
                 <h1> UI/UX designer &nbsp;</h1>
                 <span class="divider1"></span>
-
                 <h1> Product designer </h1>
               </div>
             </strong>
@@ -164,8 +163,6 @@
         <h4>design for business and consumer-facing websites with a small team</h4>
       </div>
     </div>
-    <div class="blankHXS"></div>
-
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
         <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
@@ -178,21 +175,19 @@
         <img class="intro-logo" src="./icon/ins.svg" alt="medium">
       </a>
     </div>
-    <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
           &nbsp;
         </button></a>
-
       <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
         </button></a>
     </div>
   </div>
   <!--intro-->
-  
 
-  
-  <div class="blankHS"></div>
+
+
+  <div class="blankHXS"></div>
   <!-- Arrow -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -207,7 +202,7 @@
     </div>
   </div>
   <!-- Arrow -->
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
   <!-- projects -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -216,7 +211,7 @@
           <div class="element">
 
             <div class="elementCard float cardBorder APPOINTA">
-              <img src="./image/Cover_APPOINTA.jpg" alt="Appointa">
+              <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
               <div class="element">
                 <div class="element">
                   <h5>For job interview scheduling</h5>
@@ -234,7 +229,7 @@
           <div class="element">
 
             <div class="elementCard float cardBorder SEER">
-              <img src="./image/Cover_SEER.jpg" alt="ANARE">
+              <img src="./image/Cover_SEER.jpg" alt="SEER">
               <div class="element">
                 <div class="element">
                   <h5>For grow business</h5>
@@ -268,7 +263,7 @@
     </div>
   </div>
   <!-- Arrow -->
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -353,9 +348,47 @@
     </div>
 
   </div>
-
-
   <!-- Work Sample -->
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
+  <!-- Design System -->
+  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+    <div class="Grid-cell">
+      <div class="Grid">
+        <p class="tArrow"> Design system </p>
+        <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
+      </div>
+    </div>
+  </div>
+  <div class="blankHS"></div>
+
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+
+      <div class="Grid-cell">
+        <a href="/design_system/">
+          <div class="element">
+
+            <div class="elementCard float cardBorder">
+              <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
+              <div class="element">
+                <div class="element">
+                  <h5>For website vickywang.me </h5>
+                  <h3 class="arrCard colorBlack">Design System</h3>
+                  <h4>Creating a design system to establish consistent branding and styling across the entire website</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+
+    </div>
+
+  </div>
+  <!-- Design System -->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
