--- a/photography/index.html
+++ b/photography/index.html
@@ -190,7 +190,7 @@
 
   </div>
   <!--intro-->
-  <div class="blankHM"></div>
+  <div class="blankHXS"></div>
 
   <!-- Selected photos -->
   <div class="wrapper">
