--- a/seer/index.html
+++ b/seer/index.html
@@ -128,7 +128,28 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active seer marginZero"><a href="/" class="nav-link box">PROJECT</a></li>
+          <li class="dropdown nav-item active SEER marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            <div class="dropdown-content">
+              <a href="/appointa/">
+                <div class="cardBorder APPOINTA">
+                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <div class="element">
+                    <h5 class="colorBlack">APPOINTA | For schedule interviews</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/design_system/">
+                <div class="cardBorder ">
+                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h5 class="colorBlack">Design System | For vickywang.me</h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          
+          
           <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
@@ -137,6 +158,7 @@
           <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
+
       <div class="hamburger">
         <span class="bar SEER"></span>
         <span class="bar SEER"></span>
