--- a/design_system/index.html
+++ b/design_system/index.html
@@ -202,18 +202,19 @@
       </div>
     </div>
   </div>
-  <div class="blankHXS"></div>
+
+
+  <div class="blankHM"></div>
 
 
 
 
-
-  <!-- Arrow -->
   <div class="wrapper">
-    <p class="tArrow">Timeline <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-  </div>
-  <!-- Arrow -->
-  <div class="wrapper">
+    <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+
+
+    <div class="blankHS"></div>
+
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element cardAPPOINTA">
@@ -243,12 +244,17 @@
       </div>
     </div>
   </div>
+  <div class="blankHM"></div>
 
   <div class="Grid Grid--full wrapper">
+    <p class="tArrow">Notes <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+
     <div class="Grid-cell">
       <div class="element">
         <div class="element">
-          <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
 
         </div>
@@ -265,15 +271,14 @@
     <div class="blankHXS"></div>
   </div>
   <!-- insights -->
-
-
-
   <div class="blankHM"></div>
+  <!-- Grid -->
 
   <div class="wrapper">
-    <p>Responsive grid with Flexbox</p>
-    <h1>Basic Grid</h1>
-    <p></p>
+    <p class="tArrow">Responsive grid <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHM"></div>
+
+    <h3>Basic Grid</h3>
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
         <div class="Demo content-1of1"></div>
@@ -373,7 +378,7 @@
     </div>
     <hr />
 
-    <h1>Sidebar and main content</h1>
+    <h3>Sidebar and main content</h3>
     <div class="Grid Grid--gutters Grid--1of6">
       <div class="Grid-cell">
         <div class="Demo content-1of6"></div>
@@ -400,7 +405,7 @@
     </div>
     <hr />
 
-    <h1>Left / Center / Right content alignment</h1>
+    <h3>Left / Center / Right content alignment</h3>
     <div class="Grid Grid--gutters Grid--1of2">
       <div class="Grid-cell">
         <div class="Demo content-1of2"></div>
@@ -420,7 +425,7 @@
     </div>
     <hr />
 
-    <h1>Nesting</h1>
+    <h3>Nesting</h3>
     <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
       <div class="Grid-cell">
         <div class="Demo content-1of3"></div>
@@ -454,7 +459,6 @@
 
 
 
-    <hr>
 
     <div class="blankHL"></div>
     <div class="Grid Grid--full u-textCenter">
@@ -470,6 +474,7 @@
 
   </div>
 
+  <!-- Grid -->
 
 
   <!-- test -->
