--- a/about/index.html
+++ b/about/index.html
@@ -569,8 +569,8 @@
     <img src="../image/me.jpg" alt="right">
     <div class="centeredTQ">
       <h3 class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </h3>
-      <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">Learn more about my works
-        &nbsp; <a class="textProject" href="/">here</a> </h4>
+      <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">
+        &nbsp; <a class="textProject" href="/">Explore my portfolio&#33;</a> </h4>
     </div>
   </div>
   <!-- my photo -->
