--- a/design_system/index.html
+++ b/design_system/index.html
@@ -120,7 +120,7 @@
   <!--progressBarScroll-->
   <div class="progressContainer">
     <div class="progress-container">
-      <div class="progress-bar APPOINTA" id="progressBar"></div>
+      <div class="progress-bar " id="progressBar"></div>
     </div>
   </div>
   <!--progressBarScroll-->
@@ -207,8 +207,7 @@
   <div class="blankHM"></div>
 
 
-
-
+  <!-- Card -->
   <div class="wrapper">
     <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
 
@@ -217,7 +216,7 @@
 
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <div class="element cardAPPOINTA">
+        <div class="elementInner cardAPPOINTA">
           <h4> <strong> Card title</strong> </h4>
           <ul>
             <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -230,7 +229,7 @@
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="element cardAPPOINTA">
+        <div class="elementInner cardAPPOINTA">
           <h4> <strong> Card title</strong> </h4>
           <ul>
             <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -244,10 +243,134 @@
       </div>
     </div>
   </div>
+  <!-- Card -->
   <div class="blankHM"></div>
 
+  <!-- Color -->
+  <div class="wrapper">
+    <p class="tArrow">Color <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+    <h3>Brand Expression</h3>
+
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+      <div class="Grid-cell">
+        <div class="blockS black shadowBox">HEX 161616</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS blackLess shadowBox">HEX 5f6368</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyDarkest shadowBox">HEX 999D9F</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyDark shadowBox">HEX c8c8c8</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyNormal shadowBox">HEX e4e4e4</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyLight shadowBox">HEX efefef</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyLightest shadowBox">HEX f8f8f8</div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <h3>Action</h3>
+
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+      <div class="Grid-cell">
+        <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorLter shadowBox">HEX cbeded</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorLtest shadowBox">HEX faffff</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorAlet shadowBox">HEX 161616</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS blackLess displayNone">HEX 161616</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS blackLess displayNone">HEX 161616</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS blackLess displayNone">HEX 161616</div>
+      </div>
+    </div>
+  </div>
+  <!-- Color -->
+  <div class="blankHM"></div>
+
+  <!-- Elevation -->
+  <div class="wrapper">
+    <p class="tArrow">Elevation <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
+      <div class="Grid-cell">
+        <div class="blockS colorGreyLightest shadowBox">ShadowBox</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyLightest shadowFilter">HEX f8f8f8</div>
+      </div>
+      <div class="Grid-cell">
+        <div class="blockS colorGreyLightest shadowFilterL">HEX f8f8f8</div>
+      </div>
+    </div>
+    
+    <div class="blankHS"></div>
+
+
+  </div>
+  <!-- Elevation -->
+  <div class="blankHM"></div>
+  <!-- note 1 -->
+  <div class="wrapper">
+    <p class="tArrow">Note 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+
+
+    <div class="blankHS"></div>
+
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="">
+          <div class=" element colorBgGrey leftVerLine ">
+            <h4>
+
+              <p> <strong>Title h4</strong></p>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. </li>
+                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</li>
+              </ul>
+              <p> <strong>Title h4</strong></p>
+              <ul>
+                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</li>
+              </ul>
+              <p> <strong>Title h4</strong></p>
+
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- note 1 -->
+  <!-- note 2 -->
+
+  <div class="blankHM"></div>
   <div class="Grid Grid--full wrapper">
-    <p class="tArrow">Notes <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <p class="tArrow">Note 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     <div class="blankHS"></div>
 
     <div class="Grid-cell">
@@ -261,16 +384,32 @@
       </div>
     </div>
   </div>
-  <!-- insights -->
+
+  <!-- note 2 -->
+  <!-- break points -->
   <div class="wrapper">
-    <!-- key pain points -->
+    <p class="tArrow">Break points <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+
+
+    <div class="blankHS"></div>
+
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="">
+          <div class=" element colorBgGrey leftVerLine ">
+            <h4>
 
 
 
-
-    <div class="blankHXS"></div>
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- insights -->
+  <!-- break points -->
+ 
+
   <div class="blankHM"></div>
   <!-- Grid -->
 
