--- a/design_system/index.html
+++ b/design_system/index.html
@@ -160,9 +160,9 @@
         </ul>
       </div>
       <div class="hamburger">
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
-        <span class="bar APPOINTA"></span>
+        <span class="bar "></span>
+        <span class="bar "></span>
+        <span class="bar "></span>
       </div>
     </div>
   </nav>
@@ -177,26 +177,26 @@
       <img class="" src="/design_system/Mockup.png" alt="vickywang.me">
 
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
       </div>
     </div>
 
     <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
-      <img class="displayTablet" src="MockupS.png" alt="APPOINTA">
+      <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
         <div class="blankHXS"></div>
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
+      <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+          target="_blank"> <button class="button-35 ">Slide Deck</button></a>
         <div class="blankHXS"></div>
 
       </div>
@@ -312,16 +312,17 @@
 
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
-        <div class="blockS colorGreyLightest shadowBox">ShadowBox</div>
+        <div class="blockS colorGreyLightest shadowFilter">Small Shadow</div>
       </div>
       <div class="Grid-cell">
-        <div class="blockS colorGreyLightest shadowFilter">HEX f8f8f8</div>
+        <div class="blockS colorGreyLightest shadowBox">Normal Shadow</div>
       </div>
+
       <div class="Grid-cell">
-        <div class="blockS colorGreyLightest shadowFilterL">HEX f8f8f8</div>
+        <div class="blockS colorGreyLightest shadowFilterL">Larger Shadow</div>
       </div>
     </div>
-    
+
     <div class="blankHS"></div>
 
 
@@ -389,26 +390,36 @@
   <!-- break points -->
   <div class="wrapper">
     <p class="tArrow">Break points <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+
+    <div class="Grid Grid--full u-textCenter">
+      <div class="Grid-cell">
+        <div class="Demo  ">1880px</div>
+      </div>
+      <div class="blankHXS"></div>
+
+      <div class="Grid-cell">
+        <div class="Demo  ">1080px</div>
+      </div>
+      <div class="blankHXS"></div>
+
+      <div class="Grid-cell">
+        <div class="Demo  ">680px</div>
+      </div>
+      <div class="blankHXS"></div>
+      <div class="Grid-cell">
+        <div class="Demo  ">480px</div>
+      </div>
+    </div>
+
 
 
     <div class="blankHS"></div>
 
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="">
-          <div class=" element colorBgGrey leftVerLine ">
-            <h4>
 
-
-
-            </h4>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <!-- break points -->
- 
+
 
   <div class="blankHM"></div>
   <!-- Grid -->
