--- a/design_system/index.html
+++ b/design_system/index.html
@@ -174,7 +174,7 @@
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
-      <img class="" src="/design_system/Mockup.png" alt="vickywang.me">
+      <img src="Mockup.png" alt="vickywang.me">
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
