--- a/index.html
+++ b/index.html
@@ -187,28 +187,19 @@
 
 
 
-  <div class="blankHXS"></div>
+  <div class="blankHS"></div>
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Web App</p>
-            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
-    </div>
+    <p class="tArrow">Web App <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
   </div>
   <!-- Arrow -->
-  <div class="blankHXS"></div>
+  <div class="blankHS"></div>
   <!-- projects -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <a href="/appointa/">
-          <div class="element">
+          <div class="">
 
             <div class="elementCard float cardBorder APPOINTA">
               <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
@@ -226,7 +217,7 @@
       </div>
       <div class="Grid-cell">
         <a href="/seer/">
-          <div class="element">
+          <div class="">
 
             <div class="elementCard float cardBorder SEER">
               <img src="./image/Cover_SEER.jpg" alt="SEER">
@@ -248,85 +239,21 @@
   </div>
 
 
-  <div class="blankHS"></div>
-  <!-- Arrow -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Mobile App</p>
-            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
-  <div class="blankHXS"></div>
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <a href="/GardenersHub/">
-          <div class="element">
 
-            <div class="elementCard float cardBorder GardenersHub">
-              <img src="./image/Cover_GardenersHub.svg" alt="Gardeners Hub">
-              <div class="element">
-                <div class="element">
-                  <h5>For plant lovers</h5>
-                  <h3 class="arrCard colorBlack">Gardeners hub</h3>
-                  <h5>Find solutions and ideas to help gardeners to
-                    improve their horticultural experience with neighbors and reduce wasting
-                    resources
-                    by selling or sharing locally.</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="Grid-cell">
-        <a href="/toasttab/">
-          <div class="element">
 
-            <div class="elementCard float cardBorder toasttab">
-              <img src="./image/Cover_toasttab.svg" alt="ANARE">
-              <div class="element">
-                <div class="element">
-                  <h5>For customer order</h5>
-                  <h3 class="arrCard colorBlack">Toast tab order experience</h3>
-                  <!--Analysis Report-->
-                  <h5>xxx</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-      </div>
-    </div>
-  </div>
-  <!-- projects -->
-
-  <div class="blankHM"></div>
-  <hr>
   <div class="blankHM"></div>
   <!-- Work Sample -->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Work Sample </p>
-        <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-      </div>
-    </div>
+  <!-- Arrow -->
+  <div class="wrapper">
+    <p class="tArrow">Work Samples<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
   </div>
+  <!-- Arrow -->
   <div class="blankHS"></div>
 
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <div class="element">
+        <div class="">
           <div class="elementInner float cardBorder elementCard">
             <div class="img__wrap">
               <img class="img__img" src="./image/layout_worksample.png" />
@@ -350,17 +277,13 @@
   </div>
   <!-- Work Sample -->
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+
   <!-- Design System -->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Design system </p>
-        <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-      </div>
-    </div>
+  <!-- Arrow -->
+  <div class="wrapper">
+    <p class="tArrow">Design System <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
   </div>
+  <!-- Arrow -->
   <div class="blankHS"></div>
 
   <div class="wrapper">
@@ -368,7 +291,7 @@
 
       <div class="Grid-cell">
         <a href="/design_system/">
-          <div class="element">
+          <div class="">
 
             <div class="elementCard float cardBorder">
               <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
@@ -390,21 +313,13 @@
   </div>
   <!-- Design System -->
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+
+  <!-- Arrow -->
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Other Projects</p>
-            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
-    </div>
+    <p class="tArrow">Other project<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
   </div>
+  <!-- Arrow -->
   <!-- Arrow -->
   <div class="blankHM"></div>
   <!-- projects other -->
@@ -460,9 +375,8 @@
     </div>
   </div>
   <!-- projects other -->
-  <div class="blankHS"></div>
-  <hr>
-  <div class="blankHS"></div>
+  <div class="blankHM"></div>
+
   <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
   <p class="textM centerHorz" data-aos="fade-up">More projects coming soon</p>
   <div class="blankHL"></div>
