--- a/appointa/index.html
+++ b/appointa/index.html
@@ -137,7 +137,7 @@
                 <div class="cardBorder SEER">
                   <img src="../image/Cover_SEER.jpg" alt="SEER">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | For grow business</h5>
+                    <h5 class="colorBlack">SEER | For monitoring business</h5>
                   </div>
                 </div>
               </a>
