--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="">
           <div class="elementInner float cardBorder elementCard">
             <div class="img__wrap">
-              <img class="img__img" src="./image/layout_worksample.png" />
+              <img class="img__img" src="./image/Cover_worksample.png" />
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="password">
