--- a/design_system/index.html
+++ b/design_system/index.html
@@ -144,7 +144,7 @@
                 <div class="cardBorder SEER">
                   <img src="../image/Cover_SEER.jpg" alt="SEER">
                   <div class="element">
-                    <h5 class="colorBlack">SEER | For monitoring business</h5>
+                    <h5 class="colorBlack">SEER | For tracking business performance</h5>
                   </div>
                 </div>
               </a>
@@ -329,13 +329,64 @@
   </div>
   <!-- Elevation -->
   <div class="blankHM"></div>
+  <!-- Font -->
+  <div class="wrapper">
+    <p class="tArrow">Font <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <h1> Font-family: Lato</h1>
+        <div class="blankHXS"></div>
+        <h1>h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
+        <h2>h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
+        <h3>h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
+        <h4>h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
+        <h5>h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
+        <h6>h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
+        <div class="blankHS"></div>
+
+        <p class="tArrow">specialText</p>
+        <p class="specialTextHR">specialText</p>
+
+        <h4><a href="" class="textUnderline colorGrey"> text decoration</a></h4>
+        <h4 class="textDecor">text decoration</h4>
+      </div>
+    </div>
+  </div>
+  <!-- Font -->
+  <div class="blankHM"></div>
+  <!-- icon, button -->
+  <div class="wrapper">
+    <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--top">
+      <div class="Grid-cell">
+
+        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
+          <img class="intro-logo" src="../icon/in.svg" alt="linkedin">
+        </a>
+
+        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+        </a>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--top">
+      <div class="Grid-cell">
+
+
+        <a> <button class="buttonLanding arrButtonResume">Button
+            &nbsp; </button></a>
+        <a> <button class="button-35 DS">Button</button></a>
+      </div>
+    </div>
+  </div>
+  <!-- icon, button -->
+  <div class="blankHM"></div>
   <!-- note 1 -->
   <div class="wrapper">
     <p class="tArrow">Note 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-
-
     <div class="blankHS"></div>
-
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="">
@@ -358,7 +409,6 @@
                   nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.</li>
               </ul>
-              <p> <strong>Title h4</strong></p>
 
             </h4>
           </div>
