--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <img src="./image/Cover_SEER.jpg" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h5>For grow business</h5>
+                  <h5>For tracking business performance</h5>
                   <h3 class="arrCard colorBlack">SEER</h3>
                   <!--Analysis Report-->
                   <h4>Help the brand managers understand their potential users and promote their
